--- a/E-commerce/views/edit.ejs
+++ b/E-commerce/views/edit.ejs
@@ -5,11 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="/css/edit-product.css">
     
 </head>
 <body>
     <div class="container">
-
+        <h1>Edit Product Details</h1>
         <form action="" >
             <input type="text" name="productName" id="" value="<%=product.productName%>">
             <input type="number" name="productPrice" id="" value="<%=product.productPrice%>">
