--- a/E-commerce/public/css/product-detail.css
+++ b/E-commerce/public/css/product-detail.css
@@ -15,10 +15,8 @@
     text-align: center;
 }
 
-a{  
-    
-    border: 2px solid black;
-    border-radius: 5px;
-    background-color: rgb(12, 36, 44);
-    color: aliceblue;
+.container button{
+    margin-top: 20px;
+    width: 60%;
+    height: 30px;
 }
