--- a/E-commerce/views/show.ejs
+++ b/E-commerce/views/show.ejs
@@ -18,6 +18,9 @@
         <form action="/products/<%=product._id%>/edit">
             <button>EDIT</button>
         </form>
+        <form action="/products/<%=product._id%>?_method=DELETE" method="post">
+            <button>Delete</button>
+        </form>
     </div>
 </body>
 </html>
